--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 	<! This style sheet is taken from  https://www.w3schools.com/howto/howto_js_tabs.asp>
-	<link href="styles/style.css" rel="stylesheet" type="text/css">
+  <link href="styles/style.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Montaga&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -12,6 +13,7 @@
   <button class="tablinks" onclick="openInfo(event, 'Client')">Client</button>
   <button class="tablinks" onclick="openInfo(event, 'Products')">Products</button>
   <button class="tablinks" onclick="openInfo(event, 'Cart')">Cart</button>
+  <label class="storename">SuperFoods</label>
 </div>
 
 <!-- Tab content -->
@@ -20,11 +22,21 @@
   <p>Tell us a bit about you.</p>
 	Choose a Category:
 	<select id="dietSelect" name="dietSelect" onchange="populateListProductChoices(this.id, 'displayProduct')">
-	<option value=""></option>
-	<option value="Vegetarian">Vegetarian</option>
+	  <option value=""></option>
+	  <option value="Vegetarian">Vegetarian</option>
     <option value="GlutenFree">GlutenFree</option>
+    <option value="VegGluten">Vegetarian and GlutenFree</option>
     <option value="None">None</option>
-	</select>
+  </select>
+  Preferences:
+  <select id="organicSelect" name="organicSelect" onchange="populateListProductChoices('dietSelect', 'displayProduct')">
+    <option value=""></option>
+    <option value="Organic">Organic</option>
+    <option value="None">None</option>
+  </select>
+  <footer>
+    Website designed by: Sibgatullah Shaikh
+  </footer>
 </div>
 
 <div id="Products" class="tabcontent">
@@ -34,13 +46,19 @@
 	 <div id="displayProduct"></div>
 	 <button id="addCart" type="button" class="block" onclick="selectedItems()">
 		Add selected items to cart.
-	</button>
+  </button>
+  <footer>
+    Website designed by: Sibgatullah Shaikh
+  </footer>
 </div>
 
 <div id="Cart" class="tabcontent">
   <h3>Cart</h3>
   <p>Here is your cart.</p>
   <div id="displayCart"></div>
+  <footer>
+    Website designed by: Sibgatullah Shaikh
+  </footer>
 </div>
 
 <script src="scripts/groceries.js"></script>
